--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kelortondo/operation_recreation#readme",
   "dependencies": {
+    "axios": "^0.21.4",
     "babel-core": "^6.26.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -31,6 +32,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "dotenv-webpack": "^7.0.3",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
